CSS Practise Layout,form,navbar,dropdown

--- a/HTML-CSS/HTML/form.html
+++ b/HTML-CSS/HTML/form.html
@@ -4,73 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form page</title>
+    <title>Form</title>
+    <link rel="stylesheet" href="/om-training/HTML-CSS/CSS/from.css" />
   </head>
   <body>
-    <div style="justify-content: center; margin: auto; display: flex">
-      <fieldset>
-        <legend>Om Solanki</legend>
-        <form
-          action=""
-          style="border: 1px solid black; padding: 10px; border-radius: 10px"
-        >
-          <label for="name">First Name</label><br />
-          <input type="text" style="padding: 5px; margin-bottom: 5px" /><br />
-
-          <label for="Last Name">Last Name</label><br />
-          <input type="text" style="padding: 5px" /><br />
-
-          <button
-            type="submit"
-            style="
-              margin-top: 10px;
-              display: flex;
-              margin: auto;
-              margin-top: 10px;
-            "
-          >
-            Submit
-          </button>
+    <div class="main">
+      <div class="form">
+        <form action="">
+          <div>
+            <label for="First Name">First Name</label><br />
+            <input
+              type="text"
+              placeholder="Your Name..."
+              class="input"
+              required
+            />
+          </div>
+          <div>
+            <label for="Last Name">Last Name</label><br />
+            <input
+              type="text"
+              placeholder="Last Name..."
+              class="input"
+              required
+            />
+          </div>
+          <button class="btn">Done!</button>
         </form>
-      </fieldset>
+      </div>
     </div>
-    <form action="">
-      <label for="">Choose a Car: </label>
-      <select name="" id="">
-        <option value="">om</option>
-        <option value="">oasa</option>
-        <option value="">oasa</option>
-        <option value="">oasas</option>
-      </select>
-    </form>
-    <button type="button" onclick="alert('scnsnn')">123</button>
-    <form action="">
-      <input list="cars" />
-      <datalist id="cars">
-        <option value="suzuki"></option>
-        <option value="suzuki"></option>
-        <option value="suzuki"></option>
-        <option value="suzuki"></option>
-        <option value="suzuki"></option>
-      </datalist>
-    </form>
-    <input type="hidden" value="" />
-    <video width="320" height="200" controls>
-      <source src="https://youtu.be/ewZ_YWbIWXI" type="mp4" />
-    </video>
-    <audio controls>
-      <source src="" type="mp3" />
-    </audio>
-    <object
-      data="https://www.w3schools.com/html/html_object.asp"
-      type=""
-    ></object>
-    <embed src="images.jpeg" type="" />
-    <iframe
-      width="300"
-      height="200"
-      src="https://www.youtube.com/embed/tgbNymZ7vqY"
-      frameborder="0"
-    ></iframe>
+    <div>
+      <div class="form-2main">
+        <div class="form-2">
+          <div class="col-25">
+            <label for="">First Name</label>
+          </div>
+          <div class="col-75">
+            <input type="text" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
