js practise string method ,function

--- a/JS/string.html
+++ b/JS/string.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>variable</title>
-    <script src="index.js"></script>
+    <title>Document</title>
+    <script src="/JS/string.js"></script>
   </head>
   <body>
-    <p id="cars"></p>
+    
   </body>
 </html>
