--- a/JS/index.html
+++ b/JS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>js practise</title>
-    <link rel="stylesheet" href="/JS/index.css" />
+    <script src="/JS/index.js"></script>
   </head>
   <body id="clear">
     <h1>JS Learning</h1>
