--- a/JS/index.html
+++ b/JS/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="/JS/14-06-2023/oprators/operators.js"></script>
+    <script src="/JS/15-06-2023/Function/function.js"></script>
+    <script src="/JS/15-06-2023/Function/closuer.js"></script>
+    <script src="/JS/15-06-2023/object/object.js"></script>
+    <script src="/JS/15-06-2023/object/forin.js"></script>
+    <script src="/JS/15-06-2023/object/getset.js"></script>
+    <script src="/JS/15-06-2023/object/constructors.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1 onclick="add()" style="cursor: pointer">counter</h1>
+    <p class="result">0</p>
+  </body>
 </html>
