javascript array practise , arrow function,data types,object constructors,type conversion

--- a/JS/index.html
+++ b/JS/index.html
@@ -6,11 +6,18 @@
     <title>Document</title>
     <script src="/JS/14-06-2023/oprators/operators.js"></script>
     <script src="/JS/15-06-2023/Function/function.js"></script>
-    <script src="/JS/15-06-2023/Function/closuer.js"></script>
+    <script src="/JS/15-06-2023/Function/closer.js"></script>
     <script src="/JS/15-06-2023/object/object.js"></script>
     <script src="/JS/15-06-2023/object/forin.js"></script>
     <script src="/JS/15-06-2023/object/getset.js"></script>
     <script src="/JS/15-06-2023/object/constructors.js"></script>
+    <script src="/JS/15-06-2023/object/prototype.js"></script>
+    <script src="/JS/15-06-2023/object/iterable.js"></script>
+    <script src="/JS/16-06-2023/object/object.js"></script>
+    <script src="/JS/16-06-2023/object/set.js"></script>
+    <script src="/JS/16-06-2023/object/map.js"></script>
+    <script src="/JS/16-06-2023/arrow function/arrow.js"></script>
+    <script src="/JS/array.js"></script>
   </head>
   <body>
     <h1 onclick="add()" style="cursor: pointer">counter</h1>
