js array, array method

--- a/JS/index.html
+++ b/JS/index.html
@@ -18,6 +18,7 @@
     <script src="/JS/16-06-2023/object/map.js"></script>
     <script src="/JS/16-06-2023/arrow function/arrow.js"></script>
     <script src="/JS/array.js"></script>
+    <script src="/JS/arraymethod.js"></script>
   </head>
   <body>
     <h1 onclick="add()" style="cursor: pointer">counter</h1>
