--- a/JS/index.html
+++ b/JS/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="/JS/14-06-2023/oprators/operators.js"></script>
+    <!-- <script src="/JS/14-06-2023/oprators/operators.js"></script>
     <script src="/JS/15-06-2023/Function/function.js"></script>
     <script src="/JS/15-06-2023/Function/closer.js"></script>
     <script src="/JS/15-06-2023/object/object.js"></script>
@@ -17,7 +17,7 @@
     <script src="/JS/16-06-2023/object/set.js"></script>
     <script src="/JS/16-06-2023/object/map.js"></script>
     <script src="/JS/16-06-2023/arrow function/arrow.js"></script>
-    <script src="/JS/array.js"></script>
+    <script src="/JS/array.js"></script> -->
     <script src="/JS/arraymethod.js"></script>
   </head>
   <body>
