comparision ,hoisting,ifelse,strictmode,thiskeyword,boolean

--- a/JS/index.html
+++ b/JS/index.html
@@ -18,7 +18,9 @@
     <script src="/JS/16-06-2023/object/map.js"></script>
     <script src="/JS/16-06-2023/arrow function/arrow.js"></script>
     <script src="/JS/array.js"></script> -->
-    <script src="/JS/arraymethod.js"></script>
+    <!-- <script src="/JS/arraymethod.js"></script> -->
+    <!-- <script src="/JS/multiternary.js"></script> -->
+    <script src="/JS/thiskeyword.js"></script>
   </head>
   <body>
     <h1 onclick="add()" style="cursor: pointer">counter</h1>
