arry,number,big int

--- a/JS/index.html
+++ b/JS/index.html
@@ -21,6 +21,7 @@
     <!-- <script src="/JS/arraymethod.js"></script> -->
     <!-- <script src="/JS/multiternary.js"></script> -->
     <script src="/JS/thiskeyword.js"></script>
+    <script src="/JS/array2.js"></script>
   </head>
   <body>
     <h1 onclick="add()" style="cursor: pointer">counter</h1>
